Fix: تغيير تسمية 'رقم الفاتورة' إلى 'رقم المرجع' في بطاقة معلومات نوع الطلب
- تغيير 'رقم الفاتورة' إلى 'رقم المرجع'
- تغيير 'رقم الفاتورة الإضافي 2' إلى 'رقم المرجع الإضافي 2'
- تغيير 'رقم الفاتورة الإضافي 3' إلى 'رقم المرجع الإضافي 3'
- توحيد المصطلحات في النظام

--- a/orders/templates/orders/order_detail.html
+++ b/orders/templates/orders/order_detail.html
@@ -1172,19 +1172,19 @@
                         {% endif %}
                         {% if order.invoice_number %}
                         <tr>
-                            <th>رقم الفاتورة</th>
+                            <th>رقم المرجع</th>
                             <td>{{ order.invoice_number }}</td>
                         </tr>
                         {% endif %}
                         {% if order.invoice_number_2 %}
                         <tr>
-                            <th>رقم الفاتورة الإضافي 2</th>
+                            <th>رقم المرجع الإضافي 2</th>
                             <td>{{ order.invoice_number_2 }}</td>
                         </tr>
                         {% endif %}
                         {% if order.invoice_number_3 %}
                         <tr>
-                            <th>رقم الفاتورة الإضافي 3</th>
+                            <th>رقم المرجع الإضافي 3</th>
                             <td>{{ order.invoice_number_3 }}</td>
                         </tr>
                         {% endif %}
