--- a/orders/templates/orders/order_detail.html
+++ b/orders/templates/orders/order_detail.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load decimal_filters %}
 {% load unified_status_tags %}
-{% load system_settings_tags %}
 
 {% block title %}تفاصيل الطلب - نظام الخواجه{% endblock %}
 
@@ -13,8 +12,8 @@
             <a href="{% url 'orders:order_list' %}" class="btn btn-secondary">
                 <i class="fas fa-arrow-right"></i> العودة للقائمة
             </a>
-            {% if order.creation_method == 'wizard' and order.source_draft_id %}
-                <a href="{% url 'orders:wizard_edit_order' order.pk %}" class="btn btn-primary">
+            {% if order.creation_method == 'wizard' %}
+                <a href="{% url 'orders:wizard_edit_options' order.pk %}" class="btn btn-primary">
                     <i class="fas fa-magic"></i> تعديل الطلب (ويزارد)
                 </a>
             {% else %}
